syntax = "proto3";

enum Genre {
    FANTASY = 0;
    CLASSICS = 1;
    DYSTOPIAN = 2;
    HISTORICAL_FICTION = 3;
    MYSTERY = 4;
    CONTEMPORARY_FICTION = 5;
    ADVENTURE = 6;
    FICTION = 7;
}

message Author {
    string id = 1;
    string name = 2;
    string email = 3;
    string date_of_birth = 4;
    Genre genre = 5;
    optional string profileImage = 6;
}

message SignInRequest {
    string email = 1;
    string password = 2;
}

message Book {
    string id = 1;
    string bookName = 2;
    Genre genre = 3;
    string authorId = 4;
    string published_date = 5;
    double average_ratings = 6;
    oneof author_info{
        string authorName = 7;
    }
    double price = 8;
    int32 stock = 9;
}

enum UserStatus {
     ACTIVE = 0;
     INACTIVE = 1;
     SUSPENDED = 2;
}

enum OrderStatus {
    PENDING = 0;
    FAILED = 1;
    DELIVERED = 2;
}

message Customer {
    string id = 1;
    string fullName = 2;
    string email = 3;
    string address = 4;
    string dateOfBirth = 5;
    UserStatus status = 6;
}

message Order {
    string id = 1;
    string bookId = 2;
    string customerId = 3;
    double price = 4;
    int32 quantity = 5;
    OrderStatus status = 6;
}